Iniciando pagina de cadastros

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
 <app-topo></app-topo>
-<div class="box">
-    <app-box style="width: 50%; padding: 40px;"></app-box>
-    <app-awards style="width: 50%; padding: 40px;"></app-awards>
-</div>
+<router-outlet></router-outlet>
