--- a/src/app/topo/topo.component.css
+++ b/src/app/topo/topo.component.css
@@ -24,3 +24,14 @@
     margin-left: 5px;
     height: 100;
 }
+.buttons {
+    justify-content: space-evenly;
+}
+.p {
+    color: blue;
+}
+.box {
+    display: inline-flex;
+    width: 100%;
+    flex: 1;
+}
